--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       JURIS SEARCH
     </title>
   </head>
-  <body class="text-blueGray-700 antialiased">
+  <body style="background-color: #FFF !important;" class="text-blueGray-700 antialiased">
     <noscript>
       <strong
         >We're sorry but vue-notus doesn't work properly without JavaScript
