--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script src="https://checkout.culqi.com/js/v4"></script>
 </body>
 
 </html>
